objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <label>Payment</label>
    <nameField>
        <label>Payment Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>