objects/Payment__c/fields/Payment_date__c.field-meta.xml
<CustomField>
    <fullName>Payment_date__c</fullName>
    <label>Payment date</label>
    <type>Date</type>
</CustomField>