objects/Payment__c/fields/Payment_method__c.field-meta.xml
<CustomField>
    <fullName>Payment_method__c</fullName>
    <label>Payment method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tiền mặt</fullName>
            </value>
            <value>
                <fullName>Chuyển khoản</fullName>
            </value>
            <value>
                <fullName>Thẻ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>